# trustedvote

./: .editorconfig  .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
.github/: pull.yml
include/: Makefile.am
include/trustedvote/: binary_message_serializer.hpp  config.hpp  local_node.hpp  message_serializer.hpp  node.hpp
include/trustedvote/chain/: param.hpp
include/trustedvote/message/: request_connection.hpp
src/: Makefile.am
src/libtrustedvote/: Makefile.am  binary_message_serializer.cpp  binary_message_serializer.test.cpp  config.cpp  config.test.cpp  config.test.json  local_node.cpp  local_node.test.cpp  message_serializer.cpp  node.cpp  node.test.cpp  test-main.cpp  test.cpp
src/libtrustedvote/chain/: param.cpp
src/libtrustedvote/message/: request_connection.cpp  request_connection.test.cpp
src/trusted-vote/: .gitignore  Makefile.am  main.cpp
src/trustedvoted/: .gitignore  Makefile.am  local_node.cpp  local_node.hpp  main.cpp  options.hpp
